--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div id="myModal" class="modal">
     <!-- Modal content -->
     <div class="modal-content modal-sm">
-      <span class="close"style="margin-left: 226px";>&times;</i></span>
+      <span class="cerrar1"style="margin-left: 226px";><i class="fas fa-window-close"></i></span>
       <div class="container login-container">
         <div class="row">
           <div class="col-md login-form-1">
@@ -113,7 +113,7 @@
   <!--sad-->
   <div id= "modalreserva" class="modal">
     <div class = "modal-content modal-lg">
-      <span class="close"style="margin-left: 727px";>&times;</i></span>
+      <span class="cerrar"style="margin-left: 727px";><i class="fas fa-window-close"></i></span>
       <div class="col-md login-form-1">   
         <form style="align-content: center">
   			  <div class="form-group">
