--- a/paginaTermCond.html
+++ b/paginaTermCond.html
@@ -23,14 +23,14 @@
   </head>
   <body>
 	<div class="nav-home">
-		<nav class="navbar navbar-light bg-primary"> 
+		<nav class="navbar navbar-light bg-dark shadow"> 
 		  <div class ="d-flex">
 			<a href="#"><img id="logo_img" src="images/logo.png"></a>
 			<h4 class="text-light my-auto">Rio Cuarto</h4>
 		  </div>
 			<div>
 			  <ul class="nav justify-content-start">
-				<li class="nav-item"> <a href="#" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
+				<li class="nav-item"> <a href="index.html" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
 				<li class="nav-item"> <a href="paginaError.html" target="_blank" class="nav-link text-light h5">Información</a> </li>
 				<li class="nav-item"> <a href="paginaTermCond.html" target="_blank" class="nav-link text-light h5">Terminos y condiciones</a> </li>
 				<li class="nav-item"> <a href="paginaFaqs.html" target="_blank" class="nav-link text-light h5">Preguntas frecuentes</a> </li>
