--- a/paginaFaqs.html
+++ b/paginaFaqs.html
@@ -6,21 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/custom.css">
     <title>Pagina de FAQS</title>
   </head>
   <body>
-  	<h1 style="text-align: center"><strong>Página de Preguntas Frecuentes</strong></h1>
-    <div class="container">
+    <div class="nav-home bg-dark">
+    <nav class="navbar navbar-light bg-dark shadow"> 
+      <div class ="d-flex">
+        <a href="#"><img id="logo_img" src="images/logo.png"></a>
+        <h4 class="text-light my-auto">Rio Cuarto</h4>
+      </div>
+        <div>
+          <ul class="nav justify-content-start">
+            <li class="nav-item"> <a href="index.html" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
+            <li class="nav-item"> <a href="paginaError.html" target="_blank" class="nav-link text-light h5">Información</a> </li>
+            <li class="nav-item"> <a href="paginaTermCond.html" target="_blank" class="nav-link text-light h5">Terminos y condiciones</a> </li>
+            <li class="nav-item"> <a href="paginaFaqs.html" target="_blank" class="nav-link text-light h5">Preguntas frecuentes</a> </li>
+            <li class="nav-item my-auto pl-3"> <button id="myBtn" type="button" class="btn btn-light"><p class="h5 my-auto">Iniciar sesión</p></button></li>
+          </ul>
+        </div>
+    </nav>
+    <h1 style="text-align: center" class="text-light"><strong>Página de Preguntas Frecuentes</strong></h1>
+    <div class="container bg-dark">
     <br />
     <br />
-    <br />
-
-    <br />
-
     <div class="" id="accordion">
-        <div class="faqHeader">Acerca de nosotros</div>
+        <div class="faqHeader text-light">Acerca de nosotros</div>
         <div class="card ">
             <div class="card-header">
                 <h4 class="card-header">
@@ -58,8 +71,14 @@
             </div>
         </div>
     </div>
-</div>
-
+</div> 
+<div>
+    <footer id="footer" class="bg-dark" style="padding-left: 100px;">
+        <span class="my-auto"> <i class="fab fa-twitter media-icon "></i> <i class="fab fa-facebook-f media-icon"></i> <i class="fab fa-instagram media-icon"></i> <i class="fas fa-envelope media-icon"></i></span>
+        <p>© Copyright 2020 Rio Cuarto</p>
+      </footer>
+  </div>
+  
 <style>
     .faqHeader {
         font-size: 27px;
