--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         <div class="col-lg-6">
           <div class="img-box">
-            <img src="images/airplane.png">
+            <img src="images/airplane.png" class="img-responsive">
           </div>
         </div>
       </div>        
@@ -51,8 +51,8 @@
   <div class="bg-secondary p-5 shadow">
     <div class="row p-5 text-center">
       <div class="col-lg-4">
-        <div class="shadow card bg-secondary mx-auto" style="width: 18rem;" >
-          <img src="images/servicio1.jpeg" class="card-img-top" alt="...">
+        <div class="shadow card img-fluid bg-secondary mx-auto" style="width: 18rem;" >
+          <img src="images/servicio1.jpeg" class="card-img-top " alt="...">
           <div class="shadow card-body">
             <h5 class="card-title text-light">Compromiso</h5>
             <p class="card-text text-light">Con nuestros clientes para darles lo mejor.</p>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="col-lg-4">
-        <div class="shadow card bg-secondary mx-auto" style="width: 18rem;" >
+        <div class="shadow card img-fluid bg-secondary mx-auto" style="width: 18rem;" >
           <img src="images/billetera.png" class="card-img-top " alt="...">
           <div class="shadow card-body">
             <h5 class="card-title text-light">Economico</h5>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="col-lg-4">
-        <div class="shadow card bg-secondary mx-auto" style="width: 20rem;" >
+        <div class="shadow card img-fluid bg-secondary mx-auto" style="width: 20rem;" >
           <img src="images/milleniumFalcon.png" class="card-img-top " alt="...">
           <div class="shadow card-body">
             <h5 class="card-title text-light">Velocidad</h5>
