fix responsive avion

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
         <div class="col-lg-6">
           <div class="img-box">
-            <img src="images/airplane.png" class="img-responsive">
+            <img src="images/airplane.png" class="img-fluid">
           </div>
         </div>
       </div>        
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="col-lg-4">
         <div class="shadow card img-fluid bg-secondary mx-auto" style="width: 18rem;" >
           <img src="images/billetera.png" class="card-img-top " alt="...">
