--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">  
     <!--hoja de estilos, personalizada -->
     <link rel="stylesheet" href="css/custom.css">
+    <script src="javascript/jquery-3.5.1.min.js"></script>
+    <script src="javascript/miprogramacion.js"></script>
     <title>Rio Cuarto </title>
 </head>
 <body>
@@ -26,12 +28,12 @@
             <li class="nav-item"> <a href="#" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
             <li class="nav-item"> <a href="paginaError.html" target="_blank" class="nav-link text-light h5">Información</a> </li>
             <li class="nav-item"> <a href="paginaTermCond.html" target="_blank" class="nav-link text-light h5">Terminos y condiciones</a> </li>
-            <li class="nav-item"> <a href="paginaFaqs.html" target="_blank" class="nav-link text-light h5">Preguntas frecuentes</a> </li>
+            <li class="nav-item"> <a id="faqs" href=# target='' class="nav-link text-light h5">Preguntas frecuentes</a> </li>
             <li class="nav-item my-auto pl-3"> <button id="myBtn" type="button" class="btn btn-light"><p class="h5 my-auto">Iniciar sesión</p></button></li>
           </ul>
         </div>
     </nav>  
-    <div class="bg-dark home">
+    <div id="centro" class="bg-dark home">
       <div class="row">
         <div class="col-lg-6 my-auto">
           <h1 class="text-light text-center"> La mejor página para comprar tus pasajes hacia los destinos que tu elijes. Viaja seguro, rapido y facil. </h1>
@@ -48,7 +50,7 @@
     </div>
   </div>  
   <!-- services  -->
-  <div class="bg-secondary p-5 shadow">
+  <div id = centro class="bg-secondary p-5 shadow">
     <div class="row p-5 text-center">
       <div class="col-lg-4">
         <div class="shadow card img-fluid bg-secondary mx-auto" style="width: 18rem;" >
@@ -145,7 +147,7 @@
         </form>
       </div>
      <div class="modal-footer">
-        <button type="button" class="btn btn-light"><a href="compraExitosa.html" target="">Realizar Compra</a></button>
+        <button id=btncompra type="button" class="btn btn-light"><a href=# target="">Realizar Compra</a></button>
         </div>
       </div>
     </div>
@@ -155,9 +157,7 @@
   <script src=javascript/login.js></script>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  
 
 </body>
 </html>
