--- a/index.html
+++ b/index.html
@@ -25,31 +25,18 @@
       </div>
         <div>
           <ul class="nav justify-content-start">
-            <li class="nav-item"> <a href="#" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
+            <li class="nav-item"> <a id="inicio" href="#" class="nav-link text-light h5">Inicio</a> </li> <!--el text-light cambia el color-->
             <li class="nav-item"> <a href="paginaError.html" target="_blank" class="nav-link text-light h5">Información</a> </li>
-            <li class="nav-item"> <a href="paginaTermCond.html" target="_blank" class="nav-link text-light h5">Terminos y condiciones</a> </li>
+            <li class="nav-item"> <a id="tyc" href=# target="" class="nav-link text-light h5">Terminos y condiciones</a> </li>
             <li class="nav-item"> <a id="faqs" href=# target='' class="nav-link text-light h5">Preguntas frecuentes</a> </li>
             <li class="nav-item my-auto pl-3"> <button id="myBtn" type="button" class="btn btn-light"><p class="h5 my-auto">Iniciar sesión</p></button></li>
           </ul>
         </div>
     </nav>  
-    <div id="centro" class="bg-dark home">
-      <div class="row">
-        <div class="col-lg-6 my-auto">
-          <h1 class="text-light text-center"> La mejor página para comprar tus pasajes hacia los destinos que tu elijes. Viaja seguro, rapido y facil. </h1>
-          <div class="text-center">
-            <button id ="reservabtn"type="button" class="btn btn-lg btn-light btn-primary align-center w-75">Buscá tu vuelo ahora</button>
-          </div>
-          </div>
-        <div class="col-lg-6">
-          <div class="img-box">
-            <img src="images/airplane.png" class="img-fluid">
-          </div>
-        </div>
-      </div>        
-    </div>
+  <div id="centro" class="bg-dark home">
+    <!-- div donde se visualizan los complementos-->
   </div>  
-  <!-- services  -->
+  <!-- services  contenido statico -->
   <div id = centro class="bg-secondary p-5 shadow">
     <div class="row p-5 text-center">
       <div class="col-lg-4">
@@ -113,47 +100,9 @@
       </div>
     </div>
   </div>
-  <!--sad-->
-  <div id= "modalreserva"  class="modal">
-    <div class = "modal-content modal-lg bg-dark">
-      <span class="cerrar" style="margin-left: 726px";><i class="fas fa-window-close"></i></span>
-      <div class="col-md login-form-1">   
-        <form style="align-content: center">
-  			  <div class="form-group">
-  		    	<label class='text-light' for="exampleFormControlInput1">Dirección de Email</label>
-  		    	<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  		  	</div>
-  		  	<div class="form-group">
-  		    	<label class = 'text-light' for="exampleFormControlSelect1">Destino</label>
-  		    	<select class="form-control" id="exampleFormControlSelect1">
-              <option>elegi tu destino</option>
-  			      <option>Villa Mercedes</option>
-  			      <option>Las Higueras</option>
-  			      <option>Egipto</option>
-  			      <option>Chile</option>
-  			      <option>Wuhan</option>
-  			    </select>
-  		  	</div>
-  		  	<div class="form-group">
-  		    	<label class = text-light for="exampleFormControlSelect2">cantidad de pasajeros</label>
-  		    	<select multiple class="form-control" id="exampleFormControlSelect2">
-  			      	<option>1</option>
-  			      	<option>2</option>
-  			      	<option>3</option>
-  			      	<option>4</option>
-  			      	<option>5</option>
-  		    	</select>
-  			  </div>
-        </form>
-      </div>
-     <div class="modal-footer">
-        <button id=btncompra type="button" class="btn btn-light"><a href=# target="">Realizar Compra</a></button>
-        </div>
-      </div>
-    </div>
-  </div>
+</div>
 
-  <script src=javascript/reserva.js></script>
+
   <script src=javascript/login.js></script>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
